fixing services spacing

--- a/assets/styl/objects/_sections.styl
+++ b/assets/styl/objects/_sections.styl
@@ -33,6 +33,8 @@
     width: 100%
     background-color: rgba(152,170,172,0.1)
     padding: 50px 0
+  .light-blue-cover--less
+    padding: 50px 0 0
 
   &.blog
     h2
