--- a/assets/styl/objects/_service_card.styl
+++ b/assets/styl/objects/_service_card.styl
@@ -7,8 +7,7 @@
   border-top: 6px solid bdBlue
   max-width: 300px
   text-align: center
-  @media portableBreakpoint
-    margin-bottom: 95px
+  margin-bottom: 95px
   &.third
     margin-bottom: 0
   p
